# windows-rs

./: Cargo.toml
crates/libs/bindgen/src/: classes.rs  com_methods.rs  delegates.rs  enums.rs  functions.rs  gen.rs  handles.rs  implements.rs  interfaces.rs  iterators.rs  lib.rs  structs.rs  winrt_methods.rs
crates/libs/sys/: Cargo.toml
crates/libs/sys/src/: lib.rs
crates/libs/windows/: Cargo.toml
crates/libs/windows-core/: Cargo.toml
crates/libs/windows-core-sys/: Cargo.toml
crates/libs/windows-core/src/: bindings.rs  error.rs  inspectable.rs  lib.rs  unknown.rs  weak_ref_count.rs
crates/libs/windows-sys-core/: Cargo.toml
crates/libs/windows/src/: lib.rs
crates/samples/com_uri/src/: main.rs
crates/samples/create_window_sys/: Cargo.toml
crates/samples/create_window_sys/src/: main.rs
crates/samples/enum_windows/src/: main.rs
crates/samples/kernel_event/src/: main.rs
crates/samples/rss/src/: main.rs
crates/samples/simple/src/: main.rs
crates/samples/xml/src/: main.rs
crates/tests/agile_reference/tests/: tests.rs
crates/tests/class_factory/tests/: test.rs
crates/tests/component/src/: bindings.rs
crates/tests/component_client/src/: bindings.rs  lib.rs
crates/tests/core/tests/: array.rs  guid.rs  hstrings.rs
crates/tests/deprecated/tests/: deprecated.rs
crates/tests/handles/tests/: legacy.rs
crates/tests/implement/tests/: buffer.rs  cast_self.rs  com.rs  (+6 more)
crates/tests/variant/: Cargo.toml
crates/tools/crates/: Cargo.toml
crates/tools/imp/: Cargo.toml
crates/tools/sys/: Cargo.toml
crates/tools/windows/: Cargo.toml
docs/: FAQ.md
(+1606 files in other folders)
