[package]
name = "sample_create_window_sys"
version = "0.0.0"
edition = "2018"

[dependencies.win32-foundation-sys]
path = "../../generated/win32-foundation-sys"

[dependencies.win32-graphics-sys]
path = "../../generated/win32-graphics-sys"
features = ["Gdi"]

[dependencies.win32-system-sys]
path = "../../generated/win32-system-sys"
features = ["LibraryLoader"]

[dependencies.win32-ui-sys]
path = "../../generated/win32-ui-sys"
features = ["WindowsAndMessaging"]
